# Zenith

./: .gitignore  .gitmodules  CONTRIBUTING-zh.md  CONTRIBUTING.md  CONTRIBUTING_zh.md  README-zh.md  README.md  README_zh.md  _typos.toml  icon.svg.import  project.godot  rust.gdextension  test_scene
.github/workflows/: fmt.yml  gdfmt.yml  rust_linux.yml  rust_macos.yml  rust_windows.yml  rustfmt.yml
debug/: sword.example
docs/: build-guide-zh.md  build-guide.md  code-style-zh.md  code-style.md  code_style-zh.md  code_style.md  code_style.md.txt  rust-test-zh.md  rust_test-zh.md  rust_test.md
gdrust/: Cargo.toml
gdrust/base/: Cargo.toml
gdrust/base/src/: lib.rs
gdrust/derive/src/: lib.rs
gdrust/proto/: Cargo.toml  build.rs
gdrust/proto/proto/: connect.proto
gdrust/proto/src/: lib.rs
gdrust/server/: Cargo.toml  build.rs
gdrust/server/src/: cfg.rs  connection.rs  lib.rs  main.rs
gdrust/src/: bullets.rs  cfg.rs  consts.rs  fight.rs  fight_items.rs  global.rs  lib.rs  multi.rs  player.rs  ui.rs  utils.rs  weapons.rs  zenith.rs
gdrust/src/bullets/: star_wrath_bullet.rs
gdrust/src/fight_items/: bar.rs  block.rs  block_drawer.rs  health_bar.rs  sword.rs
gdrust/src/ui/: multi_enter.rs  multi_setup.rs
gdrust/src/utils/: screen_effects.rs
gdrust/src/weapons/: enchanted_sword.rs  star_wrath.rs
locales/: multi_game.pot
resources/images/: BattleFont.png.import  Block.png.import  BoneH.png.import  BoneStabH.png.import  BoneStabV.png.import  BoneStabWarn.png.import  BoneV.png.import  CombatZone.png.import  CombatZoneBorder.png.import  CombatZoneClipper.png.import  CombatZoneUnclipper.png.import  DamageFont.png.import  DefaultFont.png.import  GasterBlast1.png.import  GasterBlast2.png.import  GasterBlast3.png.import  GasterBlastHit.png.import  (+8 more)
scenes/: Zenith.png.import  bar.tscn  block_drawer.tscn  fight.gd  fight.tscn  global.gd  multi_game.gd  multi_game.tscn  multi_join.tscn  multi_set_up.tscn  player.tscn  starter.tscn  zenith_begin.tscn
script/: Player.gd  build.py  godot_test.py  pre-commit  pull_merge.sh
scripts/: BlockDrawer.gd  fight.gd  global.gd  shield.gd
shaders/: purple.gdshader  virtual.gdshader
(+143 files in other folders)
