cargo-features = ["edition2024", "profile-rustflags"]
[package]
name = "gdrust"
version = "0.1.0"
edition = "2024"

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
rand = "0.8"
derive = { path = "./derive" }

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.action]
inherits = "dev"
features = ["action"]

[workspace]
members = [".", "derive"]
