cargo-features = ["edition2024", "profile-rustflags"]
[package]
name = "gdrust"
version = "0.1.0"
edition = "2024"

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = [
  "experimental-threads",
] }
rand = "0.8"
derive = { path = "./derive" }
proto = { path = "proto" }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "net",
  "io-std",
  "io-util",
] }
anyhow = "1"
base = { path = "base" }
prost = "0"
prost-types = { version = "0", optional = true }
bytes = "1"

[dev-dependencies]
assert_cmd = "2"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
strip = true

[workspace]
members = [".", "base", "derive", "proto", "server"]
