[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
shadow-rs = "0"
log = "0"
env_logger = "0"
anyhow = "1"
prost = "0"
prost-types = { version = "0", optional = true }

[build-dependencies]
shadow-rs = "0"
prost-build = "0"
