[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "sync",
  "net",
  "io-std",
  "io-util",
  "signal",
] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
log = "0"
env_logger = "0"
anyhow = "1"
prost = "0"
prost-types = { version = "0", optional = true }
proto = { path = "../proto" }
base = { path = "../base" }
